# python-backpack

./: .gitignore  Pipfile  README.md  backpack.code-workspace  coverage.bat  pyproject.toml  ruff.toml  run_tox.bat  run_tox_coverage.bat  setup.py  tox.bkp  tox.ini  tox_tests.bat
.github/workflows/: code_coverage.yml  codecov_tests.yml
backpack/: cache.py  custom_errors.py  file_utils.py  folder_utils.py  json_metadata.py  json_user_settings.py  json_utils.py  logger.py  patterns.py  strings.py  test_utils.py  version.py
tests/: test_cache.py  test_errors.py  test_file_utils.py  test_folder_utils.py  test_json_user_settings.py  test_json_utils.py  test_jsonmd.py  test_misc.py  test_strings.py  test_test_utils.py
tests/test_files/: edited.txt  edited_remove.txt  locked_file.txt  origin.txt  origin_remove.txt
tests/test_json/: MD_test.json  data.json  data_broken.json
