[tool.poetry]
name = "python-backpack"
version = "2.0.0"
description = "A collection of personal scripts for json, File/Folder Operations, String Validation, Custom Errors, Cache and stuff."
authors = ["Maximiliano Rocamora"]
packages = [
    { include = "backpack" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.8"
mock = "^5.2.0"
coverage = "^7.13.5"
pytest = "^8.4.2"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.3.2"]
build-backend = "poetry.core.masonry.api"
