[project]
name = "python-backpack"
version = "2.0.1"
description = "A collection of personal scripts for json, File/Folder Operations, String Validation, Custom Errors, Cache and stuff."
authors = [
    { name = "Maximiliano Rocamora" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "ruff>=0.15.12",
    "mock>=5.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backpack"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
